[package]
name = "log--print-panics"
version = "2.1.1"
authors = ["Steven Fackler <sfackler@gmail.com>", "Xiangbin.Li <dassio_98@163.com>"]
license = "MIT/Apache-2.0"
description = "A panic hook which logs and print panic messages"
repository = "https://github.com/dassio/rust-log-print-panics"
readme = "README.md"

[features]
with-backtrace = ["backtrace"]

[dependencies]
log = "0.4"
backtrace = { version = "0.3", optional = true }

[dev-dependencies]
env_logger = "0.7"

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
